--- a/src/app/components/profile/profile-view/profile-view.component.html
+++ b/src/app/components/profile/profile-view/profile-view.component.html
@@ -1,28 +1,31 @@
-<div class="container mt-5">
+<div class="container mt-5 profile-view-container">
   <div *ngIf="loading" class="text-center">
-    Loading...
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
   </div>
-  <div *ngIf="error" class="alert alert-danger">
+  <div *ngIf="error" class="alert alert-danger text-center">
     {{ error }}
   </div>
   <div *ngIf="!loading && profile" class="row">
     <div class="col-md-8">
-      <h1>{{ profile.User.name }}</h1>
-      <!-- Espacio en blanco para agregar más contenido en el futuro -->
+      <h1 class="profile-name">{{ profile.name }}</h1>
+      <p class="profile-role">{{ profile.user_type }}</p>
+      <hr class="profile-separator">
     </div>
-    <div class="col-md-4 text-center profile-section">
-      <img [src]="profile.profile_photo_url || 'default-profile-picture.jpg'" class="rounded-circle img-fluid mb-3" alt="Profile Photo">
-      <button class="btn btn-primary" (click)="editProfile()">Edit Profile</button>
-      <p><strong>Email:</strong> {{ profile.User.email }}</p>
-      <p><strong>City:</strong> {{ profile.User.city }}</p>
-      <p><strong>User Type:</strong> {{ profile.User.user_type }}</p>
-      @if(profile.bio) {
-        <p><strong>Bio:</strong> {{ profile.bio }}</p>
-      }
-      @if(profile.website) {
-        <p><strong>Website:</strong> <a [href]="profile.website" target="_blank">{{ profile.website }}</a></p>
-      }
+    <div class="col-md-4 text-center profile-section bg-beige">
+      <div class="profile-photo-container">
+        <img [src]="'http://localhost:3000' + (profile.profile_photo_url || '/uploads/default-profile-picture.jpg')" class="rounded-circle profile-photo mb-3" alt="Profile Photo">
+      </div>
+      <button class="btn btn-primary mb-4 mt-4" (click)="editProfile()">Edit Profile</button>
+      <div class="profile-details">
+        <p><strong>Email:</strong> {{ profile.email }}</p>
+        <p><strong>City:</strong> {{ profile.city }}</p>
+        <p *ngIf="profile.bio"><strong>Bio:</strong></p>
+        <p *ngIf="profile.bio">{{ profile.bio }}</p>
+        <p *ngIf="profile.website"><strong>Website:</strong></p>
+        <p *ngIf="profile.website"><a [href]="profile.website" target="_blank">{{ profile.website }}</a></p>
+      </div>
     </div>
   </div>
-  <div class="separator"></div>
 </div>
