--- a/src/app/components/profile/profile-view/profile-view.component.scss
+++ b/src/app/components/profile/profile-view/profile-view.component.scss
@@ -1,37 +1,69 @@
-.mt-5 {
-  margin-top: 3rem;
-}
+.profile-view-container {
+  .profile-name {
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
 
-.text-center {
-  text-align: center;
-}
+  .profile-role {
+    font-size: 1.5rem;
+    color: #6c757d;
+    margin-bottom: 1.5rem;
+  }
 
-.alert-danger {
-  color: #721c24;
-  background-color: #f8d7da;
-  border-color: #f5c6cb;
-}
+  .profile-separator {
+    border-top: 1px solid #ccc;
+    margin: 1rem 0;
+  }
 
-.rounded-circle {
-  border-radius: 50% !important;
-}
+  .profile-section {
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #f5f5dc; // Fondo beige
+    min-height: 100vh; // Aseguramos que ocupe toda la altura de la página
 
-.img-fluid {
-  max-width: 100%;
-  height: auto;
-}
+    .profile-photo-container {
+      position: relative;
+      width: 200px; // Aumentar tamaño de la foto de perfil
+      height: 200px; // Aumentar tamaño de la foto de perfil
+      margin: 0 auto;
+      border-radius: 50%;
+      overflow: hidden;
+      border: 2px solid #f8d7da;
 
-.mb-3 {
-  margin-bottom: 1rem;
-}
+    }
 
-.profile-section {
-  background-color: #f5f5dc; /* Color beige */
-  padding: 20px;
-  border-left: 2px solid #dee2e6; /* Línea de separación */
-}
+    .profile-photo {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-.separator {
-  border-top: 2px solid #dee2e6;
-  margin-top: 20px;
+    .profile-details {
+      p {
+        margin: 0.5rem 0;
+        font-size: 1rem;
+      }
+    }
+  }
+
+  .btn-primary {
+    background-color: #8f1c28; // Color acorde con la marca de Moovart
+    border: none;
+    &:hover {
+      background-color: #721d25;
+    }
+  }
+
+  .alert-danger {
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    color: #721c24;
+  }
+
+  .spinner-border {
+    width: 3rem;
+    height: 3rem;
+    border-width: 0.3rem;
+  }
 }
