--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand logo ml-auto" routerLink="/home">
-    <div class="logo" alt="Logo"></div>
+<nav class="navbar navbar-expand-lg navbar-expand-md navbar-dark bg-dark mb-0">
+  <a class="navbar-brand logo ml-auto ms-5 mt-2" routerLink="/home">
+    <img src="assets/logos/logo_beige.svg" alt="Logo" class="navbar-logo">
   </a>
 
   <button class="navbar-toggler" type="button" (click)="toggleSidenav()">
@@ -8,12 +8,13 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav me-auto">
-      @if(isLoggedIn) {
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/new-event">New Event</a>
-        </li>
-      }
+    <ul class="navbar-nav ms-auto">
+      <li *ngIf="!isLoggedIn" class="nav-item">
+        <a class="nav-link" routerLink="/home">Home</a>
+      </li>
+      <li *ngIf="isLoggedIn" class="nav-item">
+        <a class="nav-link" routerLink="/new-event">New Event</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/artists">Artists</a>
       </li>
@@ -23,37 +24,32 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/events">Events</a>
       </li>
-      @if(!isLoggedIn) {
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Log in</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/register">Register</a>
-        </li>
-      }
+      <li *ngIf="!isLoggedIn" class="nav-item">
+        <a class="nav-link" routerLink="/login">Log in</a>
+      </li>
+      <li *ngIf="!isLoggedIn" class="nav-item">
+        <a class="nav-link" routerLink="/register">Register</a>
+      </li>
+      <li *ngIf="isLoggedIn" class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fas fa-bell"></i>
+          <span *ngIf="notificationCount > 0" class="badge badge-danger">{{ notificationCount }}</span>
+        </a>
+      </li>
+      <li *ngIf="isLoggedIn" class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="userMenu" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <img [src]="userProfilePicture" class="rounded-circle" width="30" height="30" alt="User profile picture">
+          <span class="ms-2">{{ userName }}</span>
+        </a>
+        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+          <a class="dropdown-item" (click)="goToProfile()">Ver Perfil</a>
+          <a class="dropdown-item" (click)="logout()">Log out</a>
+        </div>
+      </li>
     </ul>
-    @if(isLoggedIn) {
-      <ul class="navbar-nav ms-auto align-items-center">
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="fas fa-bell"></i>
-            <span *ngIf="notificationCount > 0" class="badge badge-danger">{{ notificationCount }}</span>
-          </a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="userMenu" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img [src]="userProfilePicture" class="rounded-circle" width="30" height="30" alt="User profile picture">
-            <span class="ms-2">{{ userName }}</span>
-          </a>
-          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
-            <a class="dropdown-item" (click)="goToProfile()">Ver Perfil</a>
-            <a class="dropdown-item" (click)="logout()">Log out</a>
-          </div>
-        </li>
-      </ul>
-    }
   </div>
 </nav>
+
 <!--
 <div class="sidenav" [class.open]="opened">
   <ul class="list-group">
