--- a/src/app/components/profile/profile-view/profile-view.component.scss
+++ b/src/app/components/profile/profile-view/profile-view.component.scss
@@ -67,3 +67,81 @@
     border-width: 0.3rem;
   }
 }
+.carousel {
+  max-width: 450px; /* Ajusta el tamaño máximo del carrusel */
+  margin: 0 auto; /* Centra el carrusel */
+}
+
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-item img {
+  width: 100%; /* Asegúrate de que la imagen ocupe el 100% del carrusel */
+  height: auto; /* Mantén las proporciones de la imagen */
+  object-fit: contain; /* Contiene la imagen dentro del contenedor sin deformarla */
+}
+.carousel-item {
+  position: relative;
+}
+
+.delete-photo-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 10;
+  color: rgba(255, 0, 0, 0.7);
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.delete-photo-icon:hover {
+  color: rgba(255, 0, 0, 1);
+}
+
+.zoomable {
+  cursor: zoom-in;
+}
+
+.zoomable.zoomed {
+  transform: scale(2);
+  cursor: zoom-out;
+  transition: transform 0.3s ease;
+}
+
+.modal-content {
+  background: none;
+  border: none;
+}
+
+.modal-header {
+  border: none;
+  padding-bottom: 0;
+}
+
+.modal-footer {
+  border: none;
+  padding-top: 0;
+}
+
+.btn-navigation {
+  background-color: transparent;
+  border: none;
+  font-size: 2rem;
+  padding: 0;
+  color: #fff;
+}
+
+.btn-navigation:hover {
+  color: #007bff;
+}
+
+.btn-close {
+  background: #fff;
+  border-radius: 50%;
+  padding: 0.5rem;
+  font-size: 1rem;
+  line-height: 1;
+}
