--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,11 +1,10 @@
-/* navbar.component.scss */
 .navbar {
   margin-bottom: 20px;
 }
 .navbar-logo {
-  max-height: 40px; // Tamaño máximo en altura
-  max-width: 40px;  // Tamaño máximo en anchura
-  width: auto;     // Mantiene la proporción del logo
+  max-height: 40px;
+  max-width: 40px;
+  width: auto;
 }
 
 .navbar-brand {
@@ -23,23 +22,6 @@
   background-repeat: no-repeat;
   width: 30px;
   height: 30px;
-}
-
-
-.sidenav {
-  position: fixed;
-  width: 250px;
-  height: 100%;
-  background: #343a40;
-  top: 0;
-  left: 0;
-  transform: translateX(-100%);
-  transition: transform 0.3s ease;
-  z-index: 1050;
-}
-
-.sidenav.open {
-  transform: translateX(0);
 }
 
 .list-group-item {
@@ -81,3 +63,26 @@
     display: block;
   }
 }
+
+.navbar {
+  .nav-link {
+    color: white; /* Cambia el color del texto a blanco */;
+    font-size: medium;
+    
+
+
+    &:hover {
+      color: lightgray; /* Cambia el color del texto al pasar el mouse */
+    }
+  }
+}
+
+.userName{
+  color: white;
+  font-size: medium;
+}
+
+.arrow{
+  color: white;
+}
+
